<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>fish.payara.demos</groupId>
    <artifactId>conference</artifactId>
    <name>Conference Demo</name>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <organization>
        <name>Payara Services Ltd.</name>
        <url>https://www.payara.fish/support</url>
    </organization>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <jakarta.ee.version>10.0.0</jakarta.ee.version>
        <eclipse.microprofile.version>6.1</eclipse.microprofile.version>
        <payara.version>6.2025.1</payara.version>
        <payara.micro.maven.version>2.3</payara.micro.maven.version>
        <failOnMissingWebXml>false</failOnMissingWebXml>
        <conference.service.speaker.port>8881</conference.service.speaker.port>
        <conference.service.session.port>8882</conference.service.session.port>
        <conference.service.vote.port>8883</conference.service.vote.port>
        <conference.dashboard.port>8880</conference.dashboard.port>
        <mysql.connector-j.version>8.4.0</mysql.connector-j.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>jakarta.platform</groupId>
                <artifactId>jakarta.jakartaee-web-api</artifactId>
                <version>${jakarta.ee.version}</version>
            </dependency>
            <dependency>
                <groupId>org.eclipse.microprofile</groupId>
                <artifactId>microprofile</artifactId>
                <version>${eclipse.microprofile.version}</version>
                <type>pom</type>
            </dependency>
            <dependency>
                <groupId>javax.cache</groupId>
                <artifactId>cache-api</artifactId>
                <version>1.1.1</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>com.mysql</groupId>
                <artifactId>mysql-connector-j</artifactId>
                <version>${mysql.connector-j.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <modules>
        <module>Session</module>
        <module>Vote</module>
        <module>Speaker</module>
        <module>CombinedTests</module>
        <module>Dashboard</module>
    </modules>
</project>
